# ukbol

./: .cz.toml  .gitignore  .pre-commit-config.yaml  README.md  compose.yml
.github/workflows/: tests.yml
api/: .gitignore  dev.env  pyproject.toml  run-tests.sh  test.env
api/migrations/: env.py
api/migrations/versions/: 507c9999ba67_init_database.py  c22e5eca6a4d_expand_bold_table.py  c6b63b1b8a10_add_pantheon_table.py  e4a164b35bc4_add_data_source_status_table.py
api/tests/: conftest.py  test_utils.py
api/tests/api/: test_status.py  test_taxon.py
api/tests/data/: test_bold.py  test_pantheon.py  test_uksi.py  test_utils.py
api/tests/files/: mock_nbn_records.json  pantheon.csv
api/tests/files/BOLD_Public.24-JAN-2025/: BOLD_Public.24-Jan-2025.datapackage.json  BOLD_Public.24-Jan-2025.tsv
api/tests/routes/api/: test_taxon.py
api/ukbol/: app.py  bins.py  cli.py  model.py  query.py  schema.py  utils.py
api/ukbol/api/: __init__.py  status.py  taxon.py
api/ukbol/data/: bold.py  pantheon.py  uksi.py  utils.py
api/ukbol/routes/: __init__.py  status.py
api/ukbol/routes/api/: __init__.py  taxon.py
docker/api/: Dockerfile  entrypoint.sh
docker/db/: Dockerfile  init.sh
resources/: infra.drawio
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js  main.ts  style.css
web/src/components/: About.vue  Badge.vue  DNABarcoding.vue  Data.vue  Footer.vue  Home.vue  Name.vue  Nav.vue  PrioritySpecies.vue  RelatedProjects.vue  Spinner.vue
web/src/components/data/: BINSummaryTable.vue  MainView.vue  Node.vue  Sidebar.vue  SpeciesView.vue  TaxonSearch.vue  TreeNode.vue
web/src/components/pages/: About.vue  Data.vue  RelatedProjects.vue
web/src/components/tree/: Node.vue  TreeNode.vue
web/src/lib/: api.js  utils.js
