[project]
name = "ukbol"
version = "1.0.0"
description = "UK Barcode of Life website and data portal"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Josh Humphries" },
    { name = "Ginger Butcher" }
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "flask==3.0.3",
    "click==8.1.7",
    "psycopg[binary,pool]==3.1.18",
    "SQLAlchemy==2.0.29",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "flask-marshmallow==1.2.1",
    "marshmallow-sqlalchemy==1.0.0",
    "networkx==3.3",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit",
    "commitizen",
    "cz_nhm",
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/NaturalHistoryMuseum/ukbol"
changelog = "https://github.com/NaturalHistoryMuseum/ukbol/blob/main/CHANGELOG.md"

[project.scripts]
ukbol = "ukbol.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ukbol"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
